ITNJ-23 #resolve #comment add new color var update home dark mode

--- a/styles/partials/LayoutWrapper.module.scss
+++ b/styles/partials/LayoutWrapper.module.scss
@@ -1,7 +1,5 @@
 /* color variables */
-$tailwind-dark-orange: rgb(249 115 22 / 100%);
-$tailwind-lighter-orange: #f93;
-$tailwind-peppermint-green: #14b8a6;
+$discord-magenta: #ff73fa;
 
 .sketch-highlight{
   position:relative;
@@ -38,10 +36,10 @@ $tailwind-peppermint-green: #14b8a6;
   width:100%;
   height:1em;
   transform:rotate(-1deg);
-  opacity:0.7;
+  opacity:0.9;
   border-radius:0.25em;
 }
 
 .dark .sketch-highlight::before, .dark .sketch-highlight::after {
-    border-color: blue;
+    border-color: $discord-magenta;
 }
